@@ -13,6 +13,11 @@
 
 -------------------------------------------------------------------------------
 
+	2005-08-24
+
+	* Fix incompatibility with SunOS make(1S), adding a missing trailing
+	  backslash character to src/Makefile.am.
+
 	2005-08-17
 
 	* Update RISC OS versions of Makefile and config.h
